# caddymanager

./: .dockerignore  DEPLOYMENT.md  DOCKER.md  Dockerfile  README.md  SPEC.md  build.sh  docker-compose.yml
backend/: Caddyfile  Cargo.toml
backend/src/: caddy.rs  main.rs
frontend/caddymanager-ui/: README.md  package-lock.json  package.json
frontend/caddymanager-ui/src/: App.vue  main.ts
frontend/caddymanager-ui/src/assets/: main.css
frontend/caddymanager-ui/src/components/: AppHeader.vue  AppSidebar.vue
frontend/caddymanager-ui/src/router/: index.ts
frontend/caddymanager-ui/src/views/: HostsView.vue  SSLCertificatesView.vue
